cmake_minimum_required(VERSION 2.8)

project(decod2Image)
find_package(OpenCV REQUIRED)
add_compile_options(-std=c++11 -fpermissive)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(/home/whl/Documents/qtproject/decod2Image/package/include /usr/local/cuda/include /usr/local/ffmpeg/include)
link_directories(/usr/local/cuda/lib64 /usr/local/ffmpeg/lib)
add_executable(${PROJECT_NAME} "main.cpp")
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} avcodec avformat avutil swresample swscale dl)
